docs: actualizar README y evidencia del proyecto